Transparent background color for the active menu item to ensure that it does not overlap the Github ribbon.

--- a/SkylabSolution/Web/Static/css/msdnaa.css
+++ b/SkylabSolution/Web/Static/css/msdnaa.css
@@ -8,6 +8,12 @@
 	border: 0;
 }
 
+.navbar .nav > .active > a,
+.navbar .nav > .active > a:hover,
+.navbar .nav > .active > a:focus {
+    background-color: transparent;
+}
+
 nav
 {	
 	padding-top: 5px;
